--- a/MSVC/Atrc/Atrc/Atrc.vcxproj
+++ b/MSVC/Atrc/Atrc/Atrc.vcxproj
@@ -23,7 +23,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\Src\Math\AGZMath.h" />
-    <ClInclude Include="..\..\..\Src\Math\DifferentialGeometry.h" />
+    <ClInclude Include="..\..\..\Src\Math\Differential.h" />
+    <ClInclude Include="..\..\..\Src\Math\Geometry.h" />
     <ClInclude Include="..\..\..\Src\Math\Ray.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
