--- a/MSVC/Atrc/Atrc/Atrc.vcxproj
+++ b/MSVC/Atrc/Atrc/Atrc.vcxproj
@@ -27,6 +27,7 @@
     <ClInclude Include="..\..\..\Src\Camera\Camera.h" />
     <ClInclude Include="..\..\..\Src\Camera\SimplePerspectiveCamera.h" />
     <ClInclude Include="..\..\..\Src\Common.h" />
+    <ClInclude Include="..\..\..\Src\Integrator\Integrator.h" />
     <ClInclude Include="..\..\..\Src\Math\AGZMath.h" />
     <ClInclude Include="..\..\..\Src\Math\Differential.h" />
     <ClInclude Include="..\..\..\Src\Math\Geometry.h" />
@@ -34,8 +35,9 @@
     <ClInclude Include="..\..\..\Src\Math\Geometry\Sphere.h" />
     <ClInclude Include="..\..\..\Src\Math\Geometry\TransformWrapper.h" />
     <ClInclude Include="..\..\..\Src\Math\Ray.h" />
-    <ClInclude Include="..\..\..\Src\Math\Spectrum.h" />
     <ClInclude Include="..\..\..\Src\Math\Transform.h" />
+    <ClInclude Include="..\..\..\Src\Misc\Spectrum.h" />
+    <ClInclude Include="..\..\..\Src\Renderer\Renderer.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
