--- a/MSVC/Atrc/Test/Test.vcxproj
+++ b/MSVC/Atrc/Test/Test.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\Test\Camera\SimplePerspectiveCamera.cpp" />
+    <ClCompile Include="..\..\..\Test\Camera\PerspectiveCamera.cpp" />
     <ClCompile Include="..\..\..\Test\Main.cpp" />
     <ClCompile Include="..\..\..\Test\Math\Geometry.cpp" />
     <ClCompile Include="..\..\..\Test\Math\Geometry\Sphere.cpp" />
