--- a/MSVC/Atrc/Atrc/Atrc.vcxproj
+++ b/MSVC/Atrc/Atrc/Atrc.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="..\..\..\Src\Camera\PerspectiveCamera.cpp" />
     <ClCompile Include="..\..\..\Src\Math\Geometry\Sphere.cpp" />
+    <ClCompile Include="..\..\..\Src\Math\Geometry\TriangleAux.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\Src\Camera\Camera.h" />
@@ -32,6 +33,7 @@
     <ClInclude Include="..\..\..\Src\Math\Differential.h" />
     <ClInclude Include="..\..\..\Src\Math\Geometry.h" />
     <ClInclude Include="..\..\..\Src\Math\Geometry\Sphere.h" />
+    <ClInclude Include="..\..\..\Src\Math\Geometry\TriangleAux.h" />
     <ClInclude Include="..\..\..\Src\Math\Ray.h" />
     <ClInclude Include="..\..\..\Src\Math\Sample.h" />
     <ClInclude Include="..\..\..\Src\Math\Transform.h" />
