添加TriangleAux相关的基本测试

--- a/MSVC/Atrc/Test/Test.vcxproj
+++ b/MSVC/Atrc/Test/Test.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="..\..\..\Test\Main.cpp" />
     <ClCompile Include="..\..\..\Test\Math\Geometry.cpp" />
     <ClCompile Include="..\..\..\Test\Math\Geometry\Sphere.cpp" />
+    <ClCompile Include="..\..\..\Test\Math\Geometry\TriangleAux.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\Test\Catch.hpp" />
