--- a/MSVC/Atrc/Atrc/Atrc.vcxproj.filters
+++ b/MSVC/Atrc/Atrc/Atrc.vcxproj.filters
@@ -13,17 +13,11 @@
     <Filter Include="Src\Camera">
       <UniqueIdentifier>{4bc56e54-d473-463e-8319-e337d667fe08}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Src\Misc">
-      <UniqueIdentifier>{89a9ed88-33a6-4e94-bbf6-3b67330c8a16}</UniqueIdentifier>
+    <Filter Include="Src\Core">
+      <UniqueIdentifier>{e4478e03-2587-421d-9118-16c19f446909}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Src\Integrator">
-      <UniqueIdentifier>{37165295-ca26-48c1-9848-6bcde3adee80}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Src\Renderer">
-      <UniqueIdentifier>{1d4250a0-b50d-46da-b11c-029516b33538}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Src\Material">
-      <UniqueIdentifier>{3a386be9-14b5-46a3-acc1-3e00d859a8d6}</UniqueIdentifier>
+    <Filter Include="Src\Entity">
+      <UniqueIdentifier>{ece512cb-a3ed-4aee-b631-8579551c98d9}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -62,23 +56,8 @@
     <ClInclude Include="..\..\..\Src\Math\Transform.h">
       <Filter>Src\Math</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\Src\Camera\Camera.h">
-      <Filter>Src\Camera</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Src\Misc\Spectrum.h">
-      <Filter>Src\Misc</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Src\Integrator\Integrator.h">
-      <Filter>Src\Integrator</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Src\Renderer\Renderer.h">
-      <Filter>Src\Renderer</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\Src\Camera\PerspectiveCamera.h">
       <Filter>Src\Camera</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Src\Material\BxDF.h">
-      <Filter>Src\Material</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\Src\Math\Sample.h">
       <Filter>Src\Math</Filter>
@@ -88,6 +67,27 @@
     </ClInclude>
     <ClInclude Include="..\..\..\Src\Math\Geometry\TriangleMesh.h">
       <Filter>Src\Math\Geometry</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Src\Core\Camera.h">
+      <Filter>Src\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Src\Core\Entity.h">
+      <Filter>Src\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Src\Core\Integrator.h">
+      <Filter>Src\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Src\Core\Renderer.h">
+      <Filter>Src\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Src\Core\Spectrum.h">
+      <Filter>Src\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Src\Entity\GeometryEntity.h">
+      <Filter>Src\Entity</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Src\Core\Material.h">
+      <Filter>Src\Core</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
