--- a/MSVC/Atrc/Atrc/Atrc.vcxproj.filters
+++ b/MSVC/Atrc/Atrc/Atrc.vcxproj.filters
@@ -19,6 +19,9 @@
     <Filter Include="Src\Entity">
       <UniqueIdentifier>{ece512cb-a3ed-4aee-b631-8579551c98d9}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Src\Material">
+      <UniqueIdentifier>{c2e0aa58-5350-4230-926b-6569f0fd94b7}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\Src\Math\Geometry\Sphere.cpp">
@@ -35,6 +38,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\Src\Entity\GeometryEntity.cpp">
       <Filter>Src\Entity</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Src\Material\PureColor.cpp">
+      <Filter>Src\Material</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -91,6 +97,9 @@
     </ClInclude>
     <ClInclude Include="..\..\..\Src\Core\Material.h">
       <Filter>Src\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Src\Material\PureColor.h">
+      <Filter>Src\Material</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
