--- a/MSVC/Atrc/Atrc/Atrc.vcxproj.filters
+++ b/MSVC/Atrc/Atrc/Atrc.vcxproj.filters
@@ -25,6 +25,9 @@
     <Filter Include="Src\Integrator">
       <UniqueIdentifier>{319a0b6a-338d-4002-bc1f-1ace338d5b9c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Src\Renderer">
+      <UniqueIdentifier>{2966a9f7-e68e-4f89-957c-ad86c91e77ef}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\Src\Math\Geometry\Sphere.cpp">
@@ -47,6 +50,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\Src\Integrator\AmbientIntegrator.cpp">
       <Filter>Src\Integrator</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Src\Renderer\Native1sppRenderer.cpp">
+      <Filter>Src\Renderer</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -109,6 +115,9 @@
     </ClInclude>
     <ClInclude Include="..\..\..\Src\Integrator\AmbientIntegrator.h">
       <Filter>Src\Integrator</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Src\Renderer\Native1sppRenderer.h">
+      <Filter>Src\Renderer</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
