--- a/MSVC/Atrc/Atrc/Atrc.vcxproj
+++ b/MSVC/Atrc/Atrc/Atrc.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="..\..\..\Src\Camera\PerspectiveCamera.cpp" />
     <ClCompile Include="..\..\..\Src\Entity\GeometryEntity.cpp" />
     <ClCompile Include="..\..\..\Src\Integrator\AmbientIntegrator.cpp" />
+    <ClCompile Include="..\..\..\Src\Light\PointLight.cpp" />
     <ClCompile Include="..\..\..\Src\Material\PureColor.cpp" />
     <ClCompile Include="..\..\..\Src\Math\Geometry\Sphere.cpp" />
     <ClCompile Include="..\..\..\Src\Math\Geometry\TriangleAux.cpp" />
@@ -31,6 +32,7 @@
   <ItemGroup>
     <ClInclude Include="..\..\..\Src\Camera\PerspectiveCamera.h" />
     <ClInclude Include="..\..\..\Src\Common.h" />
+    <ClInclude Include="..\..\..\Src\Core\Light.h" />
     <ClInclude Include="..\..\..\Src\Core\Material.h" />
     <ClInclude Include="..\..\..\Src\Core\Camera.h" />
     <ClInclude Include="..\..\..\Src\Core\Entity.h" />
@@ -39,6 +41,7 @@
     <ClInclude Include="..\..\..\Src\Core\Spectrum.h" />
     <ClInclude Include="..\..\..\Src\Entity\GeometryEntity.h" />
     <ClInclude Include="..\..\..\Src\Integrator\AmbientIntegrator.h" />
+    <ClInclude Include="..\..\..\Src\Light\PointLight.h" />
     <ClInclude Include="..\..\..\Src\Material\PureColor.h" />
     <ClInclude Include="..\..\..\Src\Math\AGZMath.h" />
     <ClInclude Include="..\..\..\Src\Math\Differential.h" />
