常见球面采样策略

--- a/MSVC/Atrc/Atrc/Atrc.vcxproj
+++ b/MSVC/Atrc/Atrc/Atrc.vcxproj
@@ -27,6 +27,7 @@
     <ClCompile Include="..\..\..\Src\Math\Geometry\Sphere.cpp" />
     <ClCompile Include="..\..\..\Src\Math\Geometry\TriangleAux.cpp" />
     <ClCompile Include="..\..\..\Src\Math\Geometry\TriangleMesh.cpp" />
+    <ClCompile Include="..\..\..\Src\Math\Sample.cpp" />
     <ClCompile Include="..\..\..\Src\Renderer\Native1sppRenderer.cpp" />
   </ItemGroup>
   <ItemGroup>
