--- a/MSVC/Atrc/Atrc/Atrc.vcxproj
+++ b/MSVC/Atrc/Atrc/Atrc.vcxproj
@@ -20,8 +20,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\Src\Camera\PerspectiveCamera.cpp" />
+    <ClCompile Include="..\..\..\Src\Core\Integrator.cpp" />
     <ClCompile Include="..\..\..\Src\Entity\GeometryEntity.cpp" />
-    <ClCompile Include="..\..\..\Src\Integrator\AmbientIntegrator.cpp" />
+    <ClCompile Include="..\..\..\Src\Integrator\AmbientRayTracer.cpp" />
+    <ClCompile Include="..\..\..\Src\Integrator\WhittedRayTracer.cpp" />
     <ClCompile Include="..\..\..\Src\Light\PointLight.cpp" />
     <ClCompile Include="..\..\..\Src\Material\PureColor.cpp" />
     <ClCompile Include="..\..\..\Src\Math\Geometry\Sphere.cpp" />
@@ -41,7 +43,8 @@
     <ClInclude Include="..\..\..\Src\Core\Renderer.h" />
     <ClInclude Include="..\..\..\Src\Core\Spectrum.h" />
     <ClInclude Include="..\..\..\Src\Entity\GeometryEntity.h" />
-    <ClInclude Include="..\..\..\Src\Integrator\AmbientIntegrator.h" />
+    <ClInclude Include="..\..\..\Src\Integrator\AmbientRayTracer.h" />
+    <ClInclude Include="..\..\..\Src\Integrator\WhittedRayTracer.h" />
     <ClInclude Include="..\..\..\Src\Light\PointLight.h" />
     <ClInclude Include="..\..\..\Src\Material\PureColor.h" />
     <ClInclude Include="..\..\..\Src\Math\AGZMath.h" />
