--- a/MSVC/Atrc/Atrc/Atrc.vcxproj
+++ b/MSVC/Atrc/Atrc/Atrc.vcxproj
@@ -58,7 +58,10 @@
     <ClInclude Include="..\..\..\Src\Renderer\Native1sppRenderer.h" />
     <ClInclude Include="..\..\..\Src\Renderer\NativeParallelRenderer.h" />
     <ClInclude Include="..\..\..\Src\Renderer\SubareaRenderer.h" />
+    <ClInclude Include="..\..\..\Src\Sample\BufferedSampleSequence.h" />
+    <ClInclude Include="..\..\..\Src\Sample\GlobalSampleGenerator.h" />
     <ClInclude Include="..\..\..\Src\Sample\Sample.h" />
+    <ClInclude Include="..\..\..\Src\Sample\SampleSequence.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
