给BxDF提供更灵活的求值接口；实现Snell law

--- a/MSVC/Atrc/Atrc/Atrc.vcxproj.filters
+++ b/MSVC/Atrc/Atrc/Atrc.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="..\..\..\Src\Material\Diffuse.cpp">
       <Filter>Src\Material</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\Src\Material\IdealGlass.cpp">
+      <Filter>Src\Material</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\Src\Math\AGZMath.h">
@@ -165,6 +168,12 @@
       <Filter>Src\Sample</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\Src\Material\Diffuse.h">
+      <Filter>Src\Material</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Src\Material\IdealGlass.h">
+      <Filter>Src\Material</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Src\Material\FresnelFormulae.h">
       <Filter>Src\Material</Filter>
     </ClInclude>
   </ItemGroup>
