--- a/MSVC/Atrc/Atrc/Atrc.vcxproj
+++ b/MSVC/Atrc/Atrc/Atrc.vcxproj
@@ -26,6 +26,7 @@
     <ClCompile Include="..\..\..\Src\Integrator\WhittedRayTracer.cpp" />
     <ClCompile Include="..\..\..\Src\Light\PointLight.cpp" />
     <ClCompile Include="..\..\..\Src\Material\Diffuse.cpp" />
+    <ClCompile Include="..\..\..\Src\Material\IdealGlass.cpp" />
     <ClCompile Include="..\..\..\Src\Material\PureColor.cpp" />
     <ClCompile Include="..\..\..\Src\Math\Geometry\Sphere.cpp" />
     <ClCompile Include="..\..\..\Src\Math\Geometry\TriangleAux.cpp" />
@@ -48,6 +49,8 @@
     <ClInclude Include="..\..\..\Src\Integrator\WhittedRayTracer.h" />
     <ClInclude Include="..\..\..\Src\Light\PointLight.h" />
     <ClInclude Include="..\..\..\Src\Material\Diffuse.h" />
+    <ClInclude Include="..\..\..\Src\Material\FresnelFormulae.h" />
+    <ClInclude Include="..\..\..\Src\Material\IdealGlass.h" />
     <ClInclude Include="..\..\..\Src\Material\PureColor.h" />
     <ClInclude Include="..\..\..\Src\Math\AGZMath.h" />
     <ClInclude Include="..\..\..\Src\Math\Differential.h" />
